--- a/Assignment2-MobileApp-By-PonhvathVann-1502538/app/src/main/res/layout/activity_volley_request_exercise.xml
+++ b/Assignment2-MobileApp-By-PonhvathVann-1502538/app/src/main/res/layout/activity_volley_request_exercise.xml
@@ -10,7 +10,7 @@
         android:id="@+id/txtViewVolleyRequest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="8dp"
         android:text="Volley Request App"
         android:textAlignment="center"
         android:textSize="20sp"
@@ -23,22 +23,22 @@
         android:id="@+id/btnGetAklRestaurant"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="181dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="189dp"
+        android:layout_marginTop="16dp"
         android:text="List Popular Auckland Restaurants"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtViewVolleyRequest" />
 
-    <TextView
-        android:id="@+id/txtViewOutput"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="73dp"
-        android:text="TextView"
+    <ListView
+        android:id="@+id/xmlListView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="1dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnGetAklRestaurant" />
+        app:layout_constraintTop_toBottomOf="@+id/btnGetAklRestaurant"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
